# morse

./: .gitignore  README.md  pyproject.toml
src/: main.py  morse.json
tests/: test_units.py
