[tool.poetry]
name = "morse-translator"
version = "0.1.0"
description = ""
authors = ["Sergej Müller <millerserhii@gmail.com>"]
readme = "README.md"
packages = [{include = "morse_translator"}]

[tool.poetry.dependencies]
python = "^3.11"
simpleaudio = "^1.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]